style.css
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: Arial, sans-serif;
  color: #333;
  display: flex;
  flex-direction: column;
  background-color: #000;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  /* height: 100%; */
  min-height: 100vh;
}
* {
  color: white;
}

.main-content {
  flex: 1;
}

section {
  padding: 20px;
  /* border-top: 1px solid #ccc; */
}

footer {
  text-align: center;
  padding: 10px;
}
.offcanvas {
  max-width: 250px;
}
#program-section {
  margin-top: 300px;
}
.program-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(3, auto);
  gap: 20px;
  padding: 20px;
  max-width: 1200px;
  width: 100%;
}

.grid-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 20px;
  color: white;
  border-radius: 8px;
}

.grid-item h3 {
  margin: 0;
  font-size: 24px;
  font-weight: bold;
  text-align: left;
}

.grid-item p {
  margin: 20px 0 0 0;
  font-size: 16px;
}

.item1 {
  grid-column: span 2;
  background-color: #e74c3c;
  text-align: left;
}
.item2 {
  grid-column: span 4;
  background-color: #f39c12;
  text-align: left;
}
.item3 {
  grid-column: span 4;
  background-color: #3498db;
  text-align: left;
}
.item4 {
  grid-column: span 2;
  background-color: #34495e;
  text-align: left;
}
.item5 {
  grid-column: span 2;
  background-color: #9b59b6;
  text-align: left;
}
.item6 {
  grid-column: span 4;
  background-color: #e74c3c;
  text-align: left;
}

.item6 button {
  margin-top: 10px;
  padding: 10px 20px;
  font-size: 16px;
  color: #9b59b6;
  background-color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.item5 button:hover {
  background-color: #f0f0f0;
}

.meet-logo {
  width: 130px;
}
.nav__links {
  width: 420px;
  display: flex;
  margin: 50px 0px;
  justify-content: space-between;
}
.nav__links a {
  text-decoration: none;
  color: white;
}
.reg__button {
  border-radius: 10px;
  background-color: red;
  width: 200px;
  height: 40px;
  border: none;
}
.reg__button a {
  text-decoration: none;
  color: white;
}
.burger__menu {
  display: none;
}
nav.navbar {
  background-color: #000 !important;
  position: fixed;
  margin: 0 auto;
  top: 0;
  z-index: 1000;
}
.navbar-brand,
.navbar-toggler {
  color: #fff;
}

.video-container {
  position: relative;
  width: 100%;
  max-width: 800px; /* Adjust this to your desired max width */
  margin: 0 auto; /* Centers the video */
  padding-top: 56.25%; /* Aspect ratio: 16:9 */
  overflow: hidden;
}

.video-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0; /* Removes default iframe border */
  border-radius: 8px; /* Adds rounded corners (optional) */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adds a shadow for a modern look (optional) */
}


.navbar-toggler {
  border-color: rgba(255, 255, 255, 0.1);
}
.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}
.offcanvas {
  background-color: #000;
  color: white;
}
#offcanvasNavbar,
#offcanvasNavbar .nav-link {
  color: #fff;
}
.btn-close {
  filter: invert(1);
  border-color: rgba(255, 255, 255, 0.1);
}

.clip-image-left__768 img {
  position: absolute;
  top: 100px;
  left: 0;
  width: 400px;
  margin-bottom: 200px;
  z-index: -1;
}

.clip-image-right__768 img {
  position: absolute;
  top: 70px;
  right: 0;
  width: 400px;
  z-index: -1;
}
.header {
  display: flex;
  flex-direction: column;
  margin-top: 180px;
  align-items: center;
}
h1 {
  color: white;
  font-size: 100px;
  font-weight: bold;
}
.main-info {
  color: white;
  font-weight: 600;
  font-size: 25px;
  margin-top: 15px;
  margin-bottom: 15px;
}
.hero-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.secondary-info {
  color: white;
  border-width: 1px;
  border-radius: 10px;
  background-position: center center;
  border-color: #ffffff;
  border-style: solid;
  padding: 10px 15px;
  margin: 5px 0;
  display: inline-block;
  width: fit-content;
  font-weight: 600;
}
.form_background-image_left {
  position: absolute;
  left: -200px;
}
.form_background-image_right {
  position: absolute;
  right: -200px;
}

#registration-section {
  display: flex;
  justify-content: center;
  align-items: center;
  /* height: 100vh; */
  background-color: #000;
  margin-top: 150px;
}
.registration-form {
  width: 720px;
  height: 550px;
  background-color: #000;
  border-radius: 15px;
  padding: 20px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}
.registration-form::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 15px;
  padding: 8px;
  background: linear-gradient(to right, #ffa500, #800080);
  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
  -webkit-mask-composite: destination-out;
  mask-composite: exclude;
}
.form-container {
  width: 460px;
  height: 360px;
  background-color: #000;
  border-radius: 15px;
  color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  z-index: 1;
}
.form-container h1 {
  font-size: 24px;
  margin-bottom: 20px;
  color: #fff;
}
.form-group {
  margin-bottom: 15px;
  width: 100%;
  text-align: left;
}
.form-group label {
  display: block;
  font-size: 14px;
  color: #fff;
  margin-bottom: 5px;
}
.form-group input[type="text"],
.form-group input[type="email"] {
  width: 100%;
  padding: 10px;
  font-size: 14px;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #333;
  color: #fff;
}
.form-group input[type="checkbox"] {
  margin-right: 10px;
}
.form-group .checkbox-group {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.form-group .checkbox-group label {
  flex: 1 1 33%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.form-row .form-group input[type="text"] {
  width: 220px;
}
.form-group button {
  display: block;
  width: 100%;
  padding: 10px;
  font-size: 16px;
  color: #fff;
  background-color: #007bff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}
.form-row {
  display: flex;
  gap: 20px;
}
.form-row .form-group {
  flex: 1;
}

.gradient-box {
  display: inline-block;
  padding: 10px 20px;
  margin: 10px 0;
  font-weight: bold;
  position: relative;
  border-radius: 10px;
  background-color: #000;
}

.gradient-box:before {
  content: "";
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  z-index: -1;
  border-radius: inherit;
  background: linear-gradient(to right, #ffa500, #800080);
}

:root {
  --primary-color: #c8dc71;
  --gradient-color: linear-gradient(180deg, #d2ff00 0%, #00d2ff 100%);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container-car {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  height: 500px;
  gap: 3rem;
}

/* Custom */

.my-carousel {
  max-width: 90%;
  display: flex;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  transform-style: preserve-3d;
  transform: perspective(1000px);
}

.my-carousel .my-item {
  width: 20%;
  height: 250px;
  max-width: 250px;
  background-color: white;
  margin: 2px;
  transition: 0.5s;
  object-fit: cover;
  filter: brightness(1);
}

.my-carousel .my-item:hover {
  filter: brightness(1);
  transform: translateZ(170px);
}

.my-carousel .my-item:hover + * {
  filter: brightness(0.6);
  transform: translateZ(120px) rotateY(25deg);
}

.my-carousel .my-item:hover + * + * {
  filter: brightness(0.4);
  transform: translateZ(50px) rotateY(15deg);
}

.my-carousel .my-item:has(+ *:hover) {
  filter: brightness(0.6);
  transform: translateZ(120px) rotateY(-25deg);
}

.my-carousel .my-item:has(+ * + *:hover) {
  filter: brightness(0.4);
  transform: translateZ(50px) rotateY(-15deg);
}

.circle {
  width: 50px;
  height: 50px;
  border: 3px solid grey;
  border-radius: 50%;
  background-color: black;
}
.color__border_circle {
  border: 3px solid rgb(29, 111, 235);
}
.filled-circle {
  background-color: rgb(29, 111, 235);
}
.circle__wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 3px;
  align-items: center;
}
.timeline {
  display: flex;
  align-items: center;
  justify-content: space-around;
}
.timeline__straight {
  /* width: 100%; */
  height: 10px;
  background-color: grey;
  position: absolute;
  top: 3250px;
  z-index: -1;
}
.timeline-section {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer {
  position: relative;
  width: 100%;
  height: 600px;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: left;
  background: url("assets/img/footer_background.svg") center/cover,
    linear-gradient(
      135deg,
      #6a11cb 0%,
      #6604ce 25%,
      #c96dd0 50%,
      #f3804d 75%,
      #ff8c00 100%
    );
}

.footer__content_left a,
.footer__content_right a {
  color: white;
  margin: 0 10px 0 0;
}
.footer-content {
  display: flex;
  justify-content: space-between;
}

.footer-divider {
  position: absolute;
  left: 0;
  width: 100%;
  top: 0px;
  z-index: -99;
}
.footer__content_left,
.footer__content_right {
  margin: 10px 0 0 0;
  text-align: left;
}
.footer__content_right {
  display: flex;
  flex-direction: column;
  gap: 15px;
}
.footer-header {
  margin-top: 150px;
  font-weight: 600;
  font-size: 30px;
}

@media (max-width: 1024px) {
  .about-hero__left_text,
  .about-hero__right div p {
    font-size: 16px;
  }
  .record-content__block {
    width: 440px;
  }
  .card {
    width: 250px;
  }
  .burger__menu {
    display: block;
  }
  .nav__links {
    display: none;
  }
  .reg__button {
    display: none;
  }
  .reg__button_1024 {
    border-radius: 10px;
    background-color: red;
    width: 200px;
    height: 40px;
    border: none;
    margin-top: 10px;
  }
  .reg__button_1024 a {
    text-decoration: none;
    color: white;
  }
}

@media (max-width: 768px) {
  #program-section {
    margin-top: 180px;
  }

  .grid-container {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(5, auto);
  }

  .item1,
  .item2,
  .item3,
  .item4,
  .item5,
  .item6 {
    grid-column: span 6;
    width: 100%;
    }
  }

  .main-info {
    font-size: 20px;
  }
  .clip-image-left {
    display: none;
  }
  .clip-image-right {
    display: none;
  }
  .clip-image-left__768 {
    display: block;
  }
  .clip-image-left__768 img {
    position: absolute;
    top: 150px;
    left: 0;
    width: 270px;
    z-index: -1;
  }
  .clip-image-right__768 {
    display: block;
  }
  .clip-image-right__768 img {
    position: absolute;
    top: 0px;
    right: 0;
    width: 300px;
    z-index: -1;
  }
  .header {
    margin-top: 100px;
  }
  .about-section {
    padding: 0;
  }
  .record-background__img_right {
    width: 450px;
    height: 1500px;
  }
  .record-background__img_left {
    width: 600px;
  }
  .record-content__block {
    width: 670px;
  }
  .card {
    width: 220px;
  }
  .footer__content_left,
  .footer__content_right {
    margin: 10px 0 0 0;
    text-align: left;
    font-size: 14px;
  }

  .footer-header {
    font-size: 28px;
    margin-top: 50px;
  }
  .footer {
    height: 400px;
  }
}

